Fix files array to include renamed podspec file

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sfenton/react-native-readium-with-cfi",
-  "version": "3.0.4-withcfi",
+  "version": "3.0.5-withcfi",
   "description": "A react-native wrapper for https://readium.org/ with CFI support",
   "main": "lib/src/index",
   "types": "lib/src/index.d.ts",
@@ -13,7 +13,7 @@
     "ios",
     "web",
     "cpp",
-    "react-native-readium.podspec",
+    "ReactNativeReadiumWithCfi.podspec",
     "!lib/typescript/example",
     "!android/build",
     "!ios/build",
